--- a/styleslide.css
+++ b/styleslide.css
@@ -286,8 +286,8 @@ html{
 }
 .fa-stream{
   position:absolute;
-  top: 20%;
-  left: 25%;
+  /* top: 20%;
+  left: 25%; */
   transform: translateY(-50%,50%); 
   font-size: 20px;
   color: wheat;
@@ -306,8 +306,8 @@ html{
 }
 .fa-compact-disc{
   position:absolute;
-  top: 22%;
-  left: 20%;
+  /* top: 22%;
+  left: 20%; */
   transform: translateY(-50%,50%); 
   font-size: 20px;
   color: wheat;
@@ -327,8 +327,8 @@ html{
 }
 .fa-sliders-h{
   position:absolute;
-  top: 22%;
-  left: 20%;
+  /* top: 22%;
+  left: 20%; */
   transform: translateY(-50%,50%); 
   font-size: 20px;
   color: wheat;
