--- a/styleslide.css
+++ b/styleslide.css
@@ -286,10 +286,10 @@ html{
 }
 .fa-stream{
   position:absolute;
-  /* top: 20%;
-  left: 25%; */
+  top: 20%;
+  left: 25%;
   transform: translateY(-50%,50%); 
-  font-size: 19px;
+  font-size: 18px;
   color: wheat;
 }
 #nav2{
@@ -306,10 +306,10 @@ html{
 }
 .fa-compact-disc{
   position:absolute;
-  /* top: 22%;
-  left: 20%; */
+  top: 22%;
+  left: 20%;
   transform: translateY(-50%,50%); 
-  font-size: 19px;
+  font-size: 18px;
   color: wheat;
 }
 
@@ -327,10 +327,10 @@ html{
 }
 .fa-sliders-h{
   position:absolute;
-  /* top: 22%;
-  left: 20%; */
+  top: 22%;
+  left: 20%;
   transform: translateY(-50%,50%); 
-  font-size: 19px;
+  font-size: 18px;
   color: wheat;
 
 }
